app/component/column-names/column-names.scss
.column-names {
    .column-title {
        color: #A0A2A1;
        font-size: 14px;
        font-weight: 600;
        text-align: center;
        text-transform: uppercase;
        background: white;
        display: inline-block;
        width: 228px;
        padding: 10px 6px 10px 10px;
        border-right: 1px solid #DBDCDE;
        border-bottom: 1px solid #DBDCDE;
    }
    white-space: nowrap;
}

